--- a/style.css
+++ b/style.css
@@ -10,26 +10,45 @@ background-attachment: fixed;
 font-family: sans-serif;
 }
 
-header {
+body header {
 background-color: orange;
-position: fixed;
 left: 0;
 right: 0;
 top: 5px;
 height: 30px;
-display: flex;
 align-items: center;
 box-shadow: 0 0 25px 0 black;
+display:inline-block;
+width:100%;
+height:75px;
 }
-header * {
-display: inline;
+body header nav{
+
 }
-header li {
-margin: 20px;
+body header nav ul{
+
+
 }
-header li a {
+body header li {
+margin:5px 10px 0px 10px;
+padding:5px;
+float:left;
+list-style-type:none;
+
+}
+body header li a {
 color: blue;
+margin:15px;
+padding:5px;
 text-decoration: none;
+font-family: sans-serif;
+text-align:center;
+}
+
+body header li a:hover{
+	background-color:yellow;
+	border-radius:10px;
+	text-decoration:none;
 }
 
 
@@ -73,6 +92,49 @@ font-family: garamond;
 h4{
     color: blue;
     font-family: Arial;
+}
+#footer_user_1{
+	background-color:black;
+
+}
+#footer_user_1 ul{
+	display: inline-block;
+}
+#footer_user_1 ul li{
+	list-style-type: none;
+	float:left;
+}
+#footer_user_1 ul li a{
+	text-decoration:none;
+	margin:10px 10px 5px 10px;
+}
+#footer_user_2{
+	background-color:yellow;
+}
+#footer_user_2 ul{
+	display: inline-block;
+}
+#footer_user_2 ul li{
+	list-style-type: none;
+	float:left;
+}
+#footer_user_2 ul li a{
+	text-decoration:none;
+	margin:10px 10px 5px 10px;
+}
+#footer_user_3{
+	background-color:black;
+}
+#footer_user_3 ul{
+	display: inline-block;
+}
+#footer_user_3 ul li{
+	list-style-type: none;
+	float:left;
+}
+#footer_user_3 ul li a{
+	text-decoration:none;
+	margin:10px 10px 5px 10px;
 }
 
 .bottom-container {
